--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gopher-handle",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "gopher-lib": "^0.2.0",
-    "make-fetch": "^3.1.1"
+    "make-fetch": "github:ducksandgoats/make-fetch"
   }
 }
